# Meta_Hackathon

./: .dockerignore  .env.example  .gitignore  .gitmodules  DockerFile  Dockerfile  README.md  app.py  code.py  environment.py  fixed_dataset.jsonl  fixer.py  garbage_robot_dataset.jsonl  generate_trajectories.py  inference.py  models.py  openenv.yaml  pyproject.toml  qlearning.py  qtable.json  requirements.txt  rl_trajectories.jsonl  run_pipeline.sh  scenarios.py  test_env.py  train_unsloth.py
frontend/: index.html  script.js  style.css
server/: app.py
